fixed values alignment and increased contact font size

--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
 
-/* body {
-  font-family: "poppins";
-} */
+/*body {*/
+/*  font-family: "Poppins";*/
+/*}*/
 h2 {
   font-size: 36px;
 }
@@ -188,6 +188,7 @@ span {
 }
 .value-text {
   width: 250px;
+  display: inline-block;
 }
 .value-container img {
   height: 150px;
@@ -214,6 +215,7 @@ span {
 #contact-text {
   width: 50vw;
   margin: 0 auto;
+  font-size: 18px;
 }
 .text-center {
   margin: 0 auto;
